--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paisagem</title>
+    <script src="java.js"></script>
 </head>
 <body>
     <div class="paisagem"></div>
